--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
   "type": "project",
   "autoload": {
     "psr-4": {
-      "Library\\App\\": "App",
-      "Library\\Database\\": "Database",
-      "Library\\bootstrap\\": "bootstrap",
-      "Library\\scripts\\": "scripts",
-      "Library\\Http\\": "Http",
-      "Library\\public\\": "public"
+      "App\\": "App",
+      "Database\\": "Database",
+      "bootstrap\\": "bootstrap",
+      "scripts\\": "scripts",
+      "Http\\": "Http",
+      "public\\": "public"
     }
   },
   "require": {}
