--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,11 @@ services:
       - "8080:80"
     volumes:
       - .:/var/www/html
-    build: .
+    build:
+      context: .
+      args:
+        HOST_UID: 1000
+        HOST_GID: 1000
     develop:
       watch:
         - action: sync
