--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
   },
   "require": {
     "level-2/dice": "^4.0",
-    "fakerphp/faker": "^1.24"
+    "fakerphp/faker": "^1.24",
+    "dompdf/dompdf": "^3.1"
   }
 }
